--- a/css/fylo-landing-page.css
+++ b/css/fylo-landing-page.css
@@ -301,7 +301,7 @@ section .access .text p{
 }
 @media (max-width:767px){
     section .access .text p{
-       text-align: center;
+       padding-right: 0;
    }
 }
 section .access .input{
